1.0.0 (07-Dec-2013):
* Remove unnecessary cstruct dependency.
* Install ocamlfind packages as `mirage-clock-xen` and `mirage-clock-unix`.
* Fix META file descriptions.
* Add Travis tests.

0.9.9 (05-Dec-2013):
* Initial public release, based on mirage/mirage-platform#0.9.8